--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "message": {
-      "welcome": "Welcome",
+      "welcome": "Welcome to my React + TypeScript template (ESLint + Prettier configuration included)",
       "selectLanguage": "Select your language"
     }
   },
