Add AuthStore, useAuth, AuthAPI & Login page (User and token save in localStorage)

--- a/src/translations/fr/fr.json
+++ b/src/translations/fr/fr.json
@@ -15,5 +15,15 @@
   "language": {
     "fr": "Français",
     "en": "Anglais"
+  },
+  "login": {
+    "title": "Connexion",
+    "form": {
+      "email": "Adresse email",
+      "password": "Mot de passe",
+      "submit": "Se connecter",
+      "rememberMe": "Se souvenir de moi"
+    },
+    "signup": "Pas encore de compte ? Inscrivez-vous"
   }
 }
