--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -15,5 +15,15 @@
   "language": {
     "fr": "French",
     "en": "English"
+  },
+  "login": {
+    "title": "Login",
+    "form": {
+      "email": "Email",
+      "password": "Password",
+      "submit": "Submit",
+      "rememberMe": "Remember me"
+    },
+    "signUp": "Don't have an account ? Sign up"
   }
 }
