Add navbar & fix auth

--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -25,5 +25,13 @@
       "rememberMe": "Remember me"
     },
     "signUp": "Don't have an account ? Sign up"
+  },
+  "menu": {
+    "plant": "MY PLANTES",
+    "guard": "GUARDS",
+    "ticket": "TICKETS",
+    "profile": "Profil",
+    "logout": "Logout"
   }
 }
+
