--- a/src/translations/en/en.json
+++ b/src/translations/en/en.json
@@ -22,6 +22,7 @@
       "email": "Email",
       "password": "Password",
       "submit": "Submit",
+      "loginGoogle": "Login with Google",
       "rememberMe": "Remember me"
     },
     "signUp": "Don't have an account ? Sign up"
