--- a/src/translations/fr/fr.json
+++ b/src/translations/fr/fr.json
@@ -22,6 +22,7 @@
       "email": "Adresse email",
       "password": "Mot de passe",
       "submit": "Se connecter",
+      "loginGoogle": "Se connecter avec Google",
       "rememberMe": "Se souvenir de moi"
     },
     "signup": "Pas encore de compte ? Inscrivez-vous"
